--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
 @import './reset';
+@import './variables';
 @import './components/LandingPage';
 @import './components/Home';
 @import './components/PropertySearch';
@@ -6,3 +7,4 @@
 @import './components/WorkOrders';
 @import './components/Transactions';
 @import './components/Pagination';
+@import './components/Payment';
