Stipe setup on the front end

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1093,19 +1093,26 @@ template {
       width: 50%;
       margin-top: 5%;
       padding: 8px; }
-  .payment .tenant-info {
-    width: 25%;
-    margin-left: 5%; }
-    .payment .tenant-info .input-group {
-      width: 100%; }
-      .payment .tenant-info .input-group input {
-        width: 100%; }
   .payment .payment-form {
-    width: 20rem;
-    width: 25%;
-    margin-left: 5%; }
-    .payment .payment-form .input-group {
-      width: 100%; }
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid red; }
+    .payment .payment-form .tenant-info {
+      width: 27%; }
+      .payment .payment-form .tenant-info .input-group {
+        width: 100%; }
+        .payment .payment-form .tenant-info .input-group input {
+          width: 100%; }
+    .payment .payment-form .payment-info {
+      width: 27%; }
+      .payment .payment-form .payment-info .input-group {
+        width: 100%; }
+    .payment .payment-form .button-submit {
+      position: absolute;
+      bottom: 0; }
+      .payment .payment-form .button-submit button {
+        padding: 0.75rem; }
   .payment input,
   .payment .StripeElement {
     display: block;
