--- a/src/styles/components/_Payment.scss
+++ b/src/styles/components/_Payment.scss
@@ -7,7 +7,7 @@
     .payment-description {
         width: 40%;
         background-color: $primary-blue;
-        text-align: center;
+         text-align: center;
         h1 {
             text-align: center;
             font-size: 1.75rem;
@@ -23,22 +23,34 @@
             padding: 8px;
         }
     }
-    .tenant-info {
-        width: 25%;
-        .input-group {
-            width: 100%;
-            input {
+  
+    .payment-form {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        border: 1px solid red;
+        .tenant-info {
+            width: 27%;
+            .input-group {
+                width: 100%;
+                input{
+                    width: 100%;
+                }
+            }
+        }
+        .payment-info {
+            width: 27%;
+            .input-group {
                 width: 100%;
             }
         }
-        margin-left: 5%;
-    }
-    .payment-form {
-        width: 20rem;
-        width: 25%;
-        margin-left: 5%;
-        .input-group {
-            width: 100%;
+        .button-submit{
+            position: absolute;
+            bottom: 0;
+            
+            button{
+                padding: 0.75rem;
+            }
         }
     }
     input,
