--- a/src/styles/components/_Payment.scss
+++ b/src/styles/components/_Payment.scss
@@ -3,53 +3,46 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
-    padding: 2rem;
-    .payment-description {
-        width: 40%;
-        background-color: $primary-blue;
-         text-align: center;
-        h1 {
-            text-align: center;
-            font-size: 1.75rem;
-        }
-        p {
-            text-align: center;
-            padding: 0 0.5rem;
-            font-size: 1.15rem;
-        }
-        button {
-            width: 50%;
-            margin-top: 5%;
-            padding: 8px;
-        }
-    }
-  
     .payment-form {
         width: 100%;
         display: flex;
-        justify-content: space-between;
-        border: 1px solid red;
+        .payment-description {
+            width: 40%;
+            background-color: $primary-blue;
+            text-align: center;
+            h1 {
+                text-align: center;
+                font-size: 1.75rem;
+            }
+            p {
+                text-align: center;
+                padding: 0 0.5rem;
+                font-size: 1.15rem;
+            }
+            button {
+                width: 50%;
+                margin-top: 8%;
+                padding: 8px;
+            }
+        }
         .tenant-info {
-            width: 27%;
+            width: 26%;
+            padding: 1rem 0;
+            margin-left: 2%;
+            margin-right: 4%;
             .input-group {
                 width: 100%;
-                input{
+                input {
                     width: 100%;
                 }
             }
         }
         .payment-info {
-            width: 27%;
+            width: 26%;
+            padding: 1rem 0;
+            margin-right: 2%;
             .input-group {
                 width: 100%;
-            }
-        }
-        .button-submit{
-            position: absolute;
-            bottom: 0;
-            
-            button{
-                padding: 0.75rem;
             }
         }
     }
