Loader visible when payment is being processed

--- a/src/styles/components/_Payment.scss
+++ b/src/styles/components/_Payment.scss
@@ -3,11 +3,14 @@
     width: 90%;
     margin: 0 auto;
     display: flex;
+    height: 17.9rem;
     .payment-form {
         width: 100%;
         display: flex;
+        height: 100%;
         .payment-description {
             width: 40%;
+            height: 100%;
             background-color: $primary-blue;
             text-align: center;
             h1 {
@@ -25,25 +28,38 @@
                 padding: 8px;
             }
         }
-        .tenant-info {
-            width: 26%;
-            padding: 1rem 0;
-            margin-left: 2%;
-            margin-right: 4%;
-            .input-group {
-                width: 100%;
-                input {
+        .form-data {
+            .tenant-info {
+                width: 26%;
+                padding: 1rem 0;
+                margin-left: 2%;
+                margin-right: 4%;
+                .input-group {
+                    width: 100%;
+                    input {
+                        width: 100%;
+                    }
+                }
+            }
+            .payment-info {
+                width: 26%;
+                padding: 1rem 0;
+                margin-right: 2%;
+                .input-group {
                     width: 100%;
                 }
             }
         }
-        .payment-info {
-            width: 26%;
-            padding: 1rem 0;
-            margin-right: 2%;
-            .input-group {
-                width: 100%;
-            }
+    }
+    .loader-container{
+        width: 40%;
+        margin: 0 auto;
+        display: flex;
+        padding: 5rem 0;
+        flex-direction: column;
+        align-items: center;
+        h2{
+            margin-bottom: 2rem;
         }
     }
     input,
