--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1098,21 +1098,27 @@ template {
         width: 50%;
         margin-top: 8%;
         padding: 8px; }
-    .payment .payment-form .form-data .tenant-info {
-      width: 26%;
-      padding: 1rem 0;
-      margin-left: 2%;
-      margin-right: 4%; }
-      .payment .payment-form .form-data .tenant-info .input-group {
-        width: 100%; }
-        .payment .payment-form .form-data .tenant-info .input-group input {
+    .payment .payment-form .hidden {
+      display: none;
+      border: 1px solid orange; }
+    .payment .payment-form .form-data {
+      display: flex;
+      width: 60%; }
+      .payment .payment-form .form-data .tenant-info {
+        width: 48%;
+        padding: 1rem 0;
+        margin-left: 2%;
+        margin-right: 4%; }
+        .payment .payment-form .form-data .tenant-info .input-group {
           width: 100%; }
-    .payment .payment-form .form-data .payment-info {
-      width: 26%;
-      padding: 1rem 0;
-      margin-right: 2%; }
-      .payment .payment-form .form-data .payment-info .input-group {
-        width: 100%; }
+          .payment .payment-form .form-data .tenant-info .input-group input {
+            width: 100%; }
+      .payment .payment-form .form-data .payment-info {
+        width: 48%;
+        padding: 1rem 0;
+        margin-right: 2%; }
+        .payment .payment-form .form-data .payment-info .input-group {
+          width: 100%; }
   .payment .loader-container {
     width: 40%;
     margin: 0 auto;
@@ -1122,6 +1128,37 @@ template {
     align-items: center; }
     .payment .loader-container h2 {
       margin-bottom: 2rem; }
+  .payment .payment-container {
+    width: 50%;
+    margin: 0 auto;
+    padding: 1rem;
+    position: relative; }
+    .payment .payment-container h2 {
+      text-align: center; }
+    .payment .payment-container .payment-info {
+      display: flex;
+      flex-wrap: wrap;
+      margin-top: 1rem;
+      position: relative; }
+      .payment .payment-container .payment-info .payment-group {
+        width: 45%;
+        margin-bottom: 1rem;
+        border-bottom: 1px solid yellow;
+        padding-bottom: 0.25rem; }
+        .payment .payment-container .payment-info .payment-group h5 {
+          font-size: 1.25rem;
+          margin-bottom: 0.25rem; }
+      .payment .payment-container .payment-info .payment-group:nth-child(2n+2) {
+        margin-left: 10%; }
+    .payment .payment-container .payment-controls {
+      position: absolute;
+      right: -35px;
+      width: 4rem;
+      display: flex;
+      justify-content: space-between;
+      top: 10px; }
+      .payment .payment-container .payment-controls i {
+        font-size: 1.75rem; }
   .payment input,
   .payment .StripeElement {
     display: block;
