A basic payment receipt can now be printed

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1182,3 +1182,6 @@ template {
   .payment .StripeElement.IdealBankElement,
   .payment .StripeElement.PaymentRequestButton {
     padding: 0; }
+
+.property {
+  background-color: red; }
