--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -8,3 +8,7 @@
 @import './components/Transactions';
 @import './components/Pagination';
 @import './components/Payment';
+
+.property{
+    background-color: red;
+}
